package game.battle;
public enum ActionResult{
    SUCCESS,
    FAILED,
    INVALID_ACTION,
    MISSED,
    FLED,
    CAPTURED;
}