@startuml combat
skinparam style strictuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #64748B
    FontColor #0F172A
}

skinparam class<<abstract>> {
    BackgroundColor #FFF7ED
    BorderColor #C2410C
    FontColor #9A3412
}

skinparam class<<interface>> {
    BackgroundColor #ECFEFF
    BorderColor #0F766E
    FontColor #115E59
}

skinparam class<<enum>> {
    BackgroundColor #EEF2FF
    BorderColor #4338CA
    FontColor #312E81
}

package "game.battle" {
    interface Trainer <<interface>> #ECFEFF {
        +getDisplayName() String
        +getTeam() Team
        +isWild() Boolean
        +selectAction(context: BattleContext) CombatAction
    }

    class NpcTrainer #F8FAFC {
        -displayName: String
        -team: Team
        -wild: Boolean
        +selectAction(context: BattleContext) CombatAction
    }

    class WildTrainer #F8FAFC {
        -displayName: String
        -team: Team
        -wild: Boolean
        +selectAction(context: BattleContext) CombatAction
    }

    class Team #F8FAFC {
        -members: List<Pokemon>
        -activeIndex: Integer
        +getActiveMember() Pokemon
        +hasAvailableMember() Boolean
        +switchActive(index: Integer) Boolean
    }

    class Battle #F8FAFC {
        -player: Trainer
        -opponent: Trainer
        -context: BattleContext
        -finished: Boolean
        -winner: Trainer
        +start() void
        +runTurn() void
        +isFinished() Boolean
    }

    class BattleContext #F8FAFC {
        -turnNumber: Integer
        -player: Trainer
        -opponent: Trainer
        +canCapture(actor: Trainer, target: Pokemon) Boolean
        +isValidAction(actor: Trainer, action: CombatAction) Boolean
    }

    abstract class CombatAction <<abstract>> #FFF7ED {
        -actor: Trainer
        +getPriority() Integer
        +execute(context: BattleContext) ActionResult
    }

    class MoveAction #F8FAFC {
        -user: Pokemon
        -target: Pokemon
        -move: Move
        +getPriority() Integer
        +execute(context: BattleContext) ActionResult
    }

    class ItemAction #F8FAFC {
        -target: Pokemon
        -item: Item
        +getPriority() Integer
        +execute(context: BattleContext) ActionResult
    }

    class SwitchAction #F8FAFC {
        -targetIndex: Integer
        +getPriority() Integer
        +execute(context: BattleContext) ActionResult
    }

    class FleeAction #F8FAFC {
        +getPriority() Integer
        +execute(context: BattleContext) ActionResult
    }

    enum ActionResult <<enum>> #EEF2FF {
        SUCCESS
        FAILED
        INVALID_ACTION
        MISSED
        FLED
        CAPTURED
    }
}

package "game.player" {
    class Player #F8FAFC {
        -displayName: String
        -team: Team
        -wild: Boolean
        +selectAction(context: BattleContext) CombatAction
    }
}

package "game.creature" {
    class Pokemon #F8FAFC
}

package "game.creature.move" {
    class Move #F8FAFC
}

package "game.items" {
    class Item #F8FAFC
}

Trainer <|.. Player
Trainer <|.. NpcTrainer
Trainer <|.. WildTrainer

Trainer *-- Team
Team "1" o-- "1..6" Pokemon

Battle *-- BattleContext
Battle --> Trainer : request action from
Battle ..> CombatAction : compare priority and execute

CombatAction <|-- MoveAction
CombatAction <|-- ItemAction
CombatAction <|-- SwitchAction
CombatAction <|-- FleeAction

CombatAction --> Trainer : actor
MoveAction --> Pokemon : user/target
MoveAction --> Move
ItemAction --> Pokemon : target
ItemAction --> Item
SwitchAction --> Team : choose active member

BattleContext --> Trainer
BattleContext ..> Pokemon

note right of WildTrainer
WildTrainer models a wild encounter as
a trainer with one Pokemon in team.
end note

note bottom of Player
This is the same concrete player object
integrated with GameObject in diagram 05.
end note

@enduml